# matrix

./: .gitignore  CMakeLists.txt  Matrix  run_tests.sh
include/: invalid_matrix_size.h  matrix.h
src/: main.cpp  matrix.cpp
tests/: base_operation_test.cpp  constructors_test.cpp  matrix_test.cpp  matrix_tests.cpp  multiplication_test.cpp
